# FinchBenchmarks

./: .gitignore  .gitmodules  Dockerfile  Makefile  Makefile_attempt  Manifest.toml  OLD_README.txt  Project.toml  README.md  TensorMarket.jl  all_pairs.jl  all_pairs.sh  all_pairs.sl  all_pairs_opencv.cpp  all_pairs_plot.jl  all_pairs_plot.sh  all_pairs_reference.json  all_pairs_research_final.json  all_pairs_results.json  all_pairs_results2.json  all_pairs_results_research.json  all_pairs_test.json  all_pairs_viz.csv  all_pairs_viz.jl  alpha.jl  alpha.json  alpha.sh  alpha.sl  alpha_opencv.cpp  alpha_plot.jl  alpha_plot.sh  alpha_research.json  alpha_results.json  alpha_results2.json  alpha_results_reference.json  alpha_results_research.json  alpha_taco_rle.cpp  alpha_viz.csv  alpha_viz.jl  analysis.jl  (+80 more)
TensorDepot.jl/: Project.toml  README.md
apps/: CMakeLists.txt
apps/lz77/: lz77.cpp  lz77_byte.cpp
apps/png_reader/: lz_sum_kernel.c
apps/vb_example/: vb_handwritten.h
blur/: .gitignore  Manifest.toml  Project.toml  chart.py  datasets.jl  download_masks.jl  erode.jl  erode_generate.jl  fill.jl  fill_generate.jl  generate_kernels.jl  hist.jl  hist_generate.jl  hist_kernels.jls  kernels.jls  morph.jl  pyproject.toml  simpleBlur.jl  test.json
cg/: Manifest.toml  Project.toml  cg_finch.jl  cg_iterative_solvers.jl  cg_results.json  run_cg.jl
docs/: Manifest.toml
generated_code/: col_pb_spmv.jl  row_pb_spmv.jl
graphs/: Manifest.toml  Project.toml  bfs.jl  chart.py  datasets.jl  get_geomean.py  graphs.jl  graphs_data_1.json  graphs_data_2.json  lanka_data.json  (+17 more)
(+514 files in other folders)
