[tool.poetry]
name = "blur"
version = "0.1.0"
description = ""
authors = ["Willow Ahrens <willow.marie.ahrens@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.12.0"
packaging = "^24.0"
matplotlib = "^3.8.3"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
